archive/nebula/networking/consul/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul
  namespace: hashicorp
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal-nginx
  rules:
    - host: consul.skylab.fi
      http:
        paths:
          - backend:
              service:
                name: consul-ui
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - consul.skylab.fi
    - secretName: consul-tls-internal
